Fix positioning on button in index.html on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -402,7 +402,7 @@ input[type=submit] {
     display: none;
   }
 
-  .apply-shortcut {
+  .shortcut {
     margin: 0 auto;
   }
 
